--- a/gesture_pacman_web/requirements.txt
+++ b/gesture_pacman_web/requirements.txt
@@ -1,5 +1,8 @@
 Flask==2.2.2
+Flask_WTF==1.1.1
 mediapipe==0.9.1.0
 numpy==1.23.5
 opencv_contrib_python==4.7.0.68
+python-dotenv==1.0.0
 tensorflow==2.10.0
+
